# just-a-db

./: .env.example  .gitignore  Makefile  README.md  cloudformation.yaml  docker-compose.local.yaml  docker-compose.yaml
backups/: Dockerfile  app.py  pyproject.toml  run.sh
backups_python/: Dockerfile
scripts/: base.sh  containers.sh  entrypoint.sh  infra.sh
